--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
    <link rel="stylesheet" href= "style.css">
 </head>
 <body>
-    <header> Cabeçalho  </header>
-    <main>  Corpo </main>
-    <footer>Rodapé</footer>
+    <header> Introdução Web </header>
+    <main>  Primeira aula de introdução a projeto de interface Web, estamos lidando com css e html </main>
+    
+    <footer>Obrigado!</footer>
     
 </body>
 </html>
